--- a/helper-demo/pom.xml
+++ b/helper-demo/pom.xml
@@ -30,10 +30,10 @@
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-data-jpa</artifactId>-->
+<!--        </dependency>-->
 
         <dependency>
             <groupId>com.h2database</groupId>
@@ -46,6 +46,12 @@
             <artifactId>javafaker</artifactId>
             <version>1.0.2</version>
         </dependency>
+
+<!--        <dependency>-->
+<!--            <groupId>io.github.teastman</groupId>-->
+<!--            <artifactId>spring-data-hibernate-event</artifactId>-->
+<!--            <version>1.0.1</version>-->
+<!--        </dependency>-->
 
     </dependencies>
 
