--- a/helper-demo/src/main/resources/application.yml
+++ b/helper-demo/src/main/resources/application.yml
@@ -10,7 +10,10 @@ spring:
         bootstrap:
           servers: localhost:9092
   datasource:
-    url: jdbc:h2:~/TestDatabase
+    url: jdbc:h2:./TestDatabase
+  jpa:
+    generate-ddl: true
+    show-sql: true
 
 
 
