--- a/helper-demo/src/main/resources/application.yml
+++ b/helper-demo/src/main/resources/application.yml
@@ -23,4 +23,4 @@ kafka-helper:
   retry-cron-job: 0 2 18 * * *
   dead-topic: customer-dead-topic
   retry-topic: customer-retry-topic
-  enabled: false
+  enabled: true
